Complete code display & process control

--- a/pika.html
+++ b/pika.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/default.css" />
-  <link rel="stylesheet" href="./css/pika.css" />
+  <!-- <link rel="stylesheet" href="./css/pika.css" /> -->
+  <style id="styleTag"></style>
 </head>
 
 <body>
@@ -26,8 +27,13 @@
       <div class="cheeks right-cheek"></div>
       <div class="chin"></div>
     </div>
+    <div id="controller">
+      <button class="start-btn">GO !!!</button>
+    </div>
   </div>
-  <div class="code-content"></div>
+  <div class="code-content">
+    <pre id="code-area"></pre>
+  </div>
   <script src="./js/main.js"></script>
 </body>
 
