Complete speed control

--- a/pika.html
+++ b/pika.html
@@ -28,7 +28,10 @@
       <div class="chin"></div>
     </div>
     <div id="controller">
-      <button class="start-btn">GO !!!</button>
+      <button class="play-btn">GO !!!</button>
+      <button class="speed-btn">1x</button>
+      <button class="speed-btn">5x</button>
+      <button class="speed-btn">10x</button>
     </div>
   </div>
   <div class="code-content">
