Complete Pikachus back view

--- a/pika.html
+++ b/pika.html
@@ -6,12 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/default.css" />
+  <link rel="stylesheet" href="./css/welcome.css" />
   <!-- <link rel="stylesheet" href="./css/pika.css" /> -->
   <style id="styleTag"></style>
 </head>
 
 <body>
   <div class="content">
+    <div class="welcome">
+      <div class="head">
+        <div class="ears left-ear"></div>
+        <div class="ears right-ear"></div>
+      </div>
+      <div class="back">
+        <div class="striae"></div>
+        <div class="striae"></div>
+        <div class="tail">
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+          <div class="tail-section"></div>
+        </div>
+
+      </div>
+    </div>
     <div class="face">
       <div class="eyes left-eye"></div>
       <div class="nose"></div>
@@ -27,12 +48,12 @@
       <div class="cheeks right-cheek"></div>
       <div class="chin"></div>
     </div>
-    <div id="controller">
-      <button class="play-btn">GO !!!</button>
-      <button class="speed-btn">1x</button>
-      <button class="speed-btn">5x</button>
-      <button class="speed-btn">10x</button>
-    </div>
+  </div>
+  <div id="controller">
+    <button class="play-btn">GO</button>
+    <button class="speed-btn">2x</button>
+    <button class="speed-btn">5x</button>
+    <button class="speed-btn">10x</button>
   </div>
   <div class="code-content">
     <pre id="code-area"></pre>
